--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "4.6.1",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -19,6 +20,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "prisma": "4.6.1",
     "typescript": "4.9.3"
   }
 }
